Updating to WAAMI 2021
Updating files with the new information for WAAMI 2021.

--- a/Program.html
+++ b/Program.html
@@ -12,7 +12,7 @@
       gtag('config', 'UA-158987361-1');
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WAAMI 2020</title>
+    <title>WAAMI 2021</title>
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/waamistyle.css">
 </head>
@@ -24,16 +24,17 @@
         <div id="head">
             <hr />
             <h1 style="text-align:center">
-                <b>First Workshop on Analysis of Aerial Motion Imagery (WAAMI) <br> WAAMI 2020</b>
+                <b>Second Workshop on Analysis of Aerial Motion Imagery (WAAMI) <br> WAAMI 2021</b>
             </h1>
             
             <p style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; text-align:center">
-                <i>In conjunction with 25th International Conference on Pattern Recognition (ICPR2020) Milan, Italy 10 | 15 January 2021</i>
-                <a href="https://www.micc.unifi.it/icpr2020/">https://www.micc.unifi.it/icpr2020/</a> 
+                <i>In conjunction with International Conference on Computer Vision (ICCV 2021) Montreal, Canada 11 | 17 October 2021</i>
+                <a href=" http://iccv2021.thecvf.com/home">http://iccv2021.thecvf.com/home</a> <br>
+                (The ICCV 2021 conference will be a virtual experience)
             </p>
             <br>
 
-            <img src="img/waami.png" class="img-responsive">
+            <img src="img/waami.png" class="img-responsive"> 
 
         </div>
 
@@ -69,7 +70,11 @@
         <div class="row">
             <div class="span12">
                 <h2>Program</h2>
+
                 <p>
+                    TBA
+                </p>
+                <!-- <p>
                     The WAAMI workshop will be held in conjunction with the ICPR main conference, that will use the UNDERLINE web platform to run the entire ICPR on-line event. The WAAMI workshop will receive a private individual zoom link that will provide a workshop private virtual room for the whole duration of the event. From the UNDERLINE platform any registered person will have the possibility to join the workshop. All presentations will be oral. Time at disposal for Oral Presentations will be <b>20 minutes</b>. Each slot will be split in <u>15 minutes</u> for the <i>presentation</i> itself and <u>5 minutes</u> for <i>questions</i> from the audience. The presenters are kindly asked to provide the slides (pdf) in advance. The entire workshop event will be recorded using the classic ZOOM recording modality. The schedule of the online workshop event is the following (<a href="files/WAAMI_2020_Program.pdf">pdf</a>):
                 </p> 
                 <br>
@@ -207,7 +212,7 @@
                     </tr>
                 </tbody>
             </table>
-            <br>
+            <br> -->
             </div>
         </div>
     </div>
