--- a/Topics.html
+++ b/Topics.html
@@ -12,7 +12,7 @@
       gtag('config', 'UA-158987361-1');
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WAAMI 2020</title>
+    <title>WAAMI 2021</title>
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/waamistyle.css">
 </head>
@@ -23,16 +23,17 @@
          <div id="head">
             <hr />
             <h1 style="text-align:center">
-                <b>First Workshop on Analysis of Aerial Motion Imagery (WAAMI) <br> WAAMI 2020</b>
+                <b>Second Workshop on Analysis of Aerial Motion Imagery (WAAMI) <br> WAAMI 2021</b>
             </h1>
             
             <p style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; text-align:center">
-                <i>In conjunction with 25th International Conference on Pattern Recognition (ICPR2020) Milan, Italy 10 | 15 January 2021</i>
-                <a href="https://www.micc.unifi.it/icpr2020/">https://www.micc.unifi.it/icpr2020/</a> 
+                <i>In conjunction with International Conference on Computer Vision (ICCV 2021) Montreal, Canada 11 | 17 October 2021</i>
+                <a href=" http://iccv2021.thecvf.com/home">http://iccv2021.thecvf.com/home</a> <br>
+                (The ICCV 2021 conference will be a virtual experience)
             </p>
             <br>
 
-            <img src="img/waami.png" class="img-responsive">
+            <img src="img/waami.png" class="img-responsive"> 
 
         </div>
 
@@ -71,7 +72,7 @@
                 <h2>Topics</h2>
                 <br>
                 <p>
-                    The aim of this workshop is to solicit papers from academia, government, and industry researchers with original and innovative works on all aspects of analysis of aerial motion imagery to address the needs in a diverse set of application areas. Of particular interest to this workshop is analysis of aerial wide area motion imagery (WAMI) that is characterized by very large (few square miles) ground coverage. WAMI enables large scale surveillance and monitoring for extended periods of time, but suffers from unique challenges such as hundreds to thousands of moving objects per frame, small object sizes, parallax, and lower frame rates.   
+                    The aim of this workshop is to solicit papers from academia, government, and industry researchers with original and innovative works on all aspects of analysis of aerial motion imagery to address the needs in a diverse set of application areas. Of particular interest to this workshop is analysis of aerial wide area motion imagery (WAMI) that is characterized by very large (few square miles) ground coverage. WAMI enables large scale surveillance and monitoring for extended periods of time, but suffers from unique challenges such as hundreds to thousands of moving objects per frame, small object sizes, parallax, and lower frame rates.  
                 </p>
 
                 <br>
@@ -97,6 +98,11 @@
                     <li>Synthetic scene generation for aerial applications&nbsp;</li>
                     <li>Autonomous navigation&nbsp;</li>
                     <li>Multi-UAV swarm coordination and sensing&nbsp;</li>
+                    <li>Coordination of heterogeneous airborne camera systems&nbsp;</li>
+                    <li>Image Fusion applied to airborne and ground-based camera systems&nbsp;</li>
+                    <li>Mission planning for airborne data collection campaign&nbsp;</li>
+                    <li>Fusion of open-source geospatial data and airborne imagery&nbsp;</li>
+                    <li>Processing of airborne imagery for environmental or urban planning applications&nbsp;</li>
                 </ul>
                 <br>
             </div>
