--- a/Important Dates.html
+++ b/Important Dates.html
@@ -12,7 +12,7 @@
       gtag('config', 'UA-158987361-1');
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WAAMI 2020</title>
+    <title>WAAMI 2021</title>
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/waamistyle.css">
 </head>
@@ -24,16 +24,17 @@
          <div id="head">
             <hr />
             <h1 style="text-align:center">
-                <b>First Workshop on Analysis of Aerial Motion Imagery (WAAMI) <br> WAAMI 2020</b>
+                <b>Second Workshop on Analysis of Aerial Motion Imagery (WAAMI) <br> WAAMI 2021</b>
             </h1>
             
             <p style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; text-align:center">
-                <i>In conjunction with 25th International Conference on Pattern Recognition (ICPR2020) Milan, Italy 10 | 15 January 2021</i>
-                <a href="https://www.micc.unifi.it/icpr2020/">https://www.micc.unifi.it/icpr2020/</a> 
+                <i>In conjunction with International Conference on Computer Vision (ICCV 2021) Montreal, Canada 11 | 17 October 2021</i>
+                <a href=" http://iccv2021.thecvf.com/home">http://iccv2021.thecvf.com/home</a> <br>
+                (The ICCV 2021 conference will be a virtual experience)
             </p>
             <br>
 
-            <img src="img/waami.png" class="img-responsive">
+            <img src="img/waami.png" class="img-responsive"> 
 
         </div>
 
@@ -69,14 +70,14 @@
         <div class="row">
             <div class="span12">
                 <h2>Important dates</h2>
-                <p style="color:red; font-size: 20px">
+                <!-- <p style="color:red; font-size: 20px">
                     Submission deadline extension !!!
-                </p>
+                </p> -->
                 <ul class="">
-                    <li><strong>Workshop submission deadline: October 17th, 2020</strong></li>
-                    <li>Workshop author notification: <strong>November 10th, 2020</strong></li>
-                    <li>Camera-ready submission: <strong>November 20th, 2020</strong></li>
-                    <li>Finalized workshop program: <strong>December 1st, 2020</strong></li>
+                    <!-- <li><strong>Workshop submission deadline: October 17th, 2020</strong></li> -->
+                    <li>Workshop paper submission deadline: <strong>July 10th, 2021</strong></li>
+                    <li>Workshop author notification: <strong>August 1st, 2021</strong></li>
+                    <li>Camera-ready submission: <strong>August 17th, 2021</strong></li>
                 </ul>
                 <br>
             </div>
