--- a/Organizers.html
+++ b/Organizers.html
@@ -12,7 +12,7 @@
       gtag('config', 'UA-158987361-1');
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WAAMI 2020</title>
+    <title>WAAMI 2021</title>
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/waamistyle.css">
 </head>
@@ -24,16 +24,17 @@
         <div id="head">
             <hr />
             <h1 style="text-align:center">
-                <b>First Workshop on Analysis of Aerial Motion Imagery (WAAMI) <br> WAAMI 2020</b>
+                <b>Second Workshop on Analysis of Aerial Motion Imagery (WAAMI) <br> WAAMI 2021</b>
             </h1>
             
             <p style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; text-align:center">
-                <i>In conjunction with 25th International Conference on Pattern Recognition (ICPR2020) Milan, Italy 10 | 15 January 2021</i>
-                <a href="https://www.micc.unifi.it/icpr2020/">https://www.micc.unifi.it/icpr2020/</a> 
+                <i>In conjunction with International Conference on Computer Vision (ICCV 2021) Montreal, Canada 11 | 17 October 2021</i>
+                <a href=" http://iccv2021.thecvf.com/home">http://iccv2021.thecvf.com/home</a> <br>
+                (The ICCV 2021 conference will be a virtual experience)
             </p>
             <br>
 
-            <img src="img/waami.png" class="img-responsive">
+            <img src="img/waami.png" class="img-responsive"> 
 
         </div>
 
@@ -70,7 +71,15 @@
             <div class="span12">
                 <h2>Organizing Committee</h2>
 
-                <div class="flexWrap">
+                <ul>
+                    <li>Kannappan Palaniappan, University of Missouri (USA)&nbsp;</li>
+                    <li>Filiz Bunyak, University of Missouri (USA)&nbsp;</li>
+                    <li>Marc-Antoine Drouin, National Research Council, (Canada)&nbsp;</li>
+                    <li>Priya Narayanan, USARMY CCDC Army Research Laboratory (USA)&nbsp;</li>
+                    <li>Hadi Aliakbarpour, University of Missouri (USA)&nbsp;</li>
+                </ul>
+
+                <!-- <div class="flexWrap">
                   <div class="flexCol">
                     <div class="center-img">
                         <div>
@@ -141,7 +150,7 @@
                         
                     </div>
                   </div>
-                </div>
+                </div> -->
 
                 <br>   
 
@@ -169,7 +178,7 @@
                 <br> 
 
                 <p>
-                    Webmaster: Gani Rahmon <a target="_top" href="mailto:grzc7@mail.missouri.edu?Subject=WAAMI%2020">grzc7@mail.missouri.edu</a> 
+                    Webmaster: Gani Rahmon <a target="_top" href="mailto:gani.rahmon@mail.missouri.edu?Subject=WAAMI%2020">gani.rahmon@mail.missouri.edu</a> 
                 </p> 
                 <br>
             </div>
