--- a/Submission.html
+++ b/Submission.html
@@ -12,7 +12,7 @@
       gtag('config', 'UA-158987361-1');
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WAAMI 2020</title>
+    <title>WAAMI 2021</title>
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/waamistyle.css">
 </head>
@@ -24,16 +24,17 @@
          <div id="head">
             <hr />
             <h1 style="text-align:center">
-                <b>First Workshop on Analysis of Aerial Motion Imagery (WAAMI) <br> WAAMI 2020</b>
+                <b>Second Workshop on Analysis of Aerial Motion Imagery (WAAMI) <br> WAAMI 2021</b>
             </h1>
             
             <p style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; text-align:center">
-                <i>In conjunction with 25th International Conference on Pattern Recognition (ICPR2020) Milan, Italy 10 | 15 January 2021</i>
-                <a href="https://www.micc.unifi.it/icpr2020/">https://www.micc.unifi.it/icpr2020/</a> 
+                <i>In conjunction with International Conference on Computer Vision (ICCV 2021) Montreal, Canada 11 | 17 October 2021</i>
+                <a href=" http://iccv2021.thecvf.com/home">http://iccv2021.thecvf.com/home</a> <br>
+                (The ICCV 2021 conference will be a virtual experience)
             </p>
             <br>
 
-            <img src="img/waami.png" class="img-responsive">
+            <img src="img/waami.png" class="img-responsive"> 
 
         </div>
 
@@ -70,7 +71,12 @@
             <div class="span12">
                 <h2>Paper Format</h2>
                 <br>
+
                 <p>
+                    TBA
+                </p>
+
+                <!-- <p>
                     The Proceedings of the WAAMI 2020 workshop will be published online in the Springer Lecture Notes in Computer Science (LNCS) series. Papers will be selected by a single blind (reviewers are anonymous) review process based on their originality, relevance, and clarity of presentation.
                 </p>
                 <br>
@@ -92,18 +98,23 @@
                 <p>
                     Springer’s proceedings LaTeX templates are available in <a href="https://www.overleaf.com/latex/templates/springer-lecture-notes-in-computer-science/kzwwpvhwnvfj#.WsdHOy5uZpg">Overleaf</a>. Springer encourages authors to include their <a href="https://www.springer.com/gp/authors-editors/orcid?wt_mc=Other.Other.1.AUT642.ORCID%20proceedings%20pilot%202017&utm_medium=other&utm_source=other&utm_content=8232017&utm_campaign=1_barz01_orcid%20proceedings%20pilot%202017">ORCIDs</a> in their papers.
                 </p>
-                <br>
+                <br> -->
 
                 <h2>Submission System</h2>
                 <br>
-                <p style="color:red";>
+
+                <p>
+                    TBA
+                </p>
+
+                <!-- <p style="color:red";>
                     SUBMISSIONS NOW OPEN!!! 
                 </p>
                 <br>
 
                 <p style="color:red";>
                     (Please note that papers not accepted in the general session and fitting WAAMI themes could be submitted <a href="https://cmt3.research.microsoft.com/WAAMI2020">here</a>)
-                </p>
+                </p> -->
 
             </div>
         </div>
