--- a/Important Dates.html
+++ b/Important Dates.html
@@ -22,6 +22,11 @@
     <div class="container">
 
          <div id="head">
+
+             <p style="text-align:center">
+                <a href="https://waami.github.io/2020">Click HERE for WAAMI 2020</a>
+            </p>
+
             <hr />
             <h1 style="text-align:center">
                 <b>Second Workshop on Analysis of Aerial Motion Imagery (WAAMI) <br> WAAMI 2021</b>
