New member added.
Adding new members.

--- a/Organizers.html
+++ b/Organizers.html
@@ -179,6 +179,9 @@
                     <li>Omar Tahri, INSA Centre Val de Loire (France)&nbsp;</li>
                     <li>Zhangyang (Atlas) Wang, Texas A&M University (USA)&nbsp;</li>
                     <li>Wenjun Zeng, Microsoft Research&nbsp;</li>
+                    <li>Simon Julier, University College London&nbsp;</li>
+                    <li>Joseph L. Mundy, Vision Systems&nbsp;</li>
+                    <li>Rui Wang, Facebook&nbsp;</li>
                 </ul>
                 <br> 
 
