--- a/Organizers.html
+++ b/Organizers.html
@@ -81,7 +81,6 @@
                     <li>Filiz Bunyak, University of Missouri (USA)&nbsp;</li>
                     <li>Marc-Antoine Drouin, National Research Council, (Canada)&nbsp;</li>
                     <li>Priya Narayanan, USARMY CCDC Army Research Laboratory (USA)&nbsp;</li>
-                    <li>Hadi Aliakbarpour, University of Missouri (USA)&nbsp;</li>
                 </ul>
 
                 <!-- <div class="flexWrap">
@@ -161,27 +160,30 @@
 
                 <h2>Program Committee</h2>
                 <ul>
+                    <li>Hadi Aliakbarpour, University of Missouri (USA)&nbsp;</li>
                     <li>Sanjeev Agarwal, USARMY CCDC C5ISR (USA)&nbsp;</li>
                     <li>Arslan Basharat, Kitware (USA)&nbsp;</li>
-                    <li>May Casterline, NVIDIA (USA)&nbsp;</li>
+                    <li>Erik Blasch, Air Force Research Laboratory (USA)&nbsp;</li>
                     <li>Ilker Ersoy, University of Missouri (USA)&nbsp;</li>
-                    <li>Diego Faria, Aston University (UK)&nbsp;</li>
                     <li>Adel Hafiane, INSA Centre Val de Loire (France)&nbsp;</li>
+                    <li>Simon Julier, University College London&nbsp;</li>
                     <li>Chandra Kambhamettu, University of Delaware (USA)&nbsp;</li>
+                    <li>Heesung Kwon, USARMY CCDC Army Research Laboratory (USA)&nbsp;</li>
                     <li>Guoyu Lu, Rochester Institute of Technology (USA)&nbsp;</li>
-                    <li>Rengarajan Pelapur, Thermo Fisher Scientific (USA)&nbsp;</li>
+                    <li>Joseph L. Mundy, Vision Systems&nbsp;</li>
                     <li>Mahdieh Poostchi, Samsung Electronics (USA)&nbsp;</li>
                     <li>David Portugal, University of Coimbra (Portugal)&nbsp;</li>
-                    <li>Surya Prasath, University of Cincinnati (USA)&nbsp;</li>
                     <li>Rao Raghuveer, USARMY CCDC  Army Research Laboratory (USA)&nbsp;</li>
                     <li>Walter Scheirer, University of Notre Dame (USA)&nbsp;</li>
                     <li>Guna Seetharaman, Navy Research Labaratory (USA)&nbsp;</li>
                     <li>Omar Tahri, INSA Centre Val de Loire (France)&nbsp;</li>
-                    <li>Zhangyang (Atlas) Wang, Texas A&M University (USA)&nbsp;</li>
-                    <li>Wenjun Zeng, Microsoft Research&nbsp;</li>
-                    <li>Simon Julier, University College London&nbsp;</li>
-                    <li>Joseph L. Mundy, Vision Systems&nbsp;</li>
                     <li>Rui Wang, Facebook&nbsp;</li>
+                    <li>Zhangyang (Atlas) Wang, Texas A&M University (USA)&nbsp;</li>
+                   <!--  <li>May Casterline, NVIDIA (USA)&nbsp;</li>
+                    <li>Diego Faria, Aston University (UK)&nbsp;</li>
+                    <li>Rengarajan Pelapur, Thermo Fisher Scientific (USA)&nbsp;</li>
+                    <li>Surya Prasath, University of Cincinnati (USA)&nbsp;</li>
+                    <li>Wenjun Zeng, Microsoft Research&nbsp;</li>   -->
                 </ul>
                 <br> 
 
