Topics improvement and submission open.

--- a/Topics.html
+++ b/Topics.html
@@ -82,8 +82,8 @@
 
                 <br>
                 <p>Topics of interest include but are not limited to:</p>
-
-                <ul>
+                
+                <ul data-header="Methods/Approaches"> 
                     <li>Robust feature detection and matching&nbsp;</li>
                     <li>Aerial video stabilization&nbsp;</li>
                     <li>Object detection and/or recognition in aerial videos&nbsp;</li>
@@ -94,8 +94,11 @@
                     <li>Landmark detection and recognition for aerial navigation&nbsp;</li>
                     <li>Structure-From-Motion&nbsp;</li>
                     <li>Aerial 3D reconstruction&nbsp;</li>
-                    <li>Scene understanding and video summarization for aerial platforms&nbsp;</li>
+                </ul>
+
+                <ul data-header="Focus Areas"> 
                     <li>Applications of computer vision for aerial platforms&nbsp;</li>
+                    <li>Scene understanding and video summarization for aerial platforms&nbsp;</li>
                     <li>Embedded video processing for aerial systems&nbsp;</li>
                     <li>Multi-sensor data fusion for aerial systems&nbsp;</li>
                     <li>Deep learning for aerial image analysis&nbsp;</li>
@@ -103,12 +106,19 @@
                     <li>Synthetic scene generation for aerial applications&nbsp;</li>
                     <li>Autonomous navigation&nbsp;</li>
                     <li>Multi-UAV swarm coordination and sensing&nbsp;</li>
-                    <li>Coordination of heterogeneous airborne camera systems&nbsp;</li>
+                    <li>Coordination of airborne camera systems&nbsp;</li>
+                    <li>Mission planning for airborne data collection&nbsp;</li>
                     <li>Image Fusion applied to airborne and ground-based camera systems&nbsp;</li>
-                    <li>Mission planning for airborne data collection campaign&nbsp;</li>
                     <li>Fusion of open-source geospatial data and airborne imagery&nbsp;</li>
-                    <li>Processing of airborne imagery for environmental or urban planning applications&nbsp;</li>
                 </ul>
+
+                <ul data-header="Applications"> 
+                    <li>Environmental or urban planning&nbsp;</li>
+                    <li>Agriculture&nbsp;</li>
+                    <li>Disaster relief&nbsp;</li>
+                    <li>Surveillance and monitoring&nbsp;</li>
+                </ul>
+
                 <br>
             </div>
         </div>
