--- a/Submission.html
+++ b/Submission.html
@@ -78,29 +78,25 @@
                 <br>
 
                 <p>
-                    TBA
-                </p>
-
-                <!-- <p>
-                    The Proceedings of the WAAMI 2020 workshop will be published online in the Springer Lecture Notes in Computer Science (LNCS) series. Papers will be selected by a single blind (reviewers are anonymous) review process based on their originality, relevance, and clarity of presentation.
+                    WAAMI 2021 workshop papers will be published by IEEE in the main conference proceedings. Papers will be selected by a single blind (reviewers are anonymous) review process based on their originality, relevance, and clarity of presentation.
                 </p>
                 <br>
 
                 <p>
-                    Submissions must be formatted in accordance with the Springer's Computer Science Proceedings guidelines (<a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines</a>). Two types of contribution will be considered:
+                    Submission must be formatted in accordance with ICCV guidelines given at <a href="http://iccv2021.thecvf.com/node/4#submission-guidelines">http://iccv2021.thecvf.com/node/4#submission-guidelines</a>. You should use the same template as ICCV, replacing 'ICCV paper' with 'ICCV workshop paper'. Submissions should be 4 to 8 pages excluding references.
                 </p>
-                <ul class="">
+                <!-- <ul class="">
                     <li>Full paper (12-15 pages)</li>
                     <li>Short papers (6-8 pages)</li>
-                </ul>
+                </ul> -->
                 <br>
                 <p>
-                    Accepted manuscripts will be included in the ICPR 2020 Workshop Proceedings Springer volume. Once accepted, at least one author is expected to attend the event and present the paper.
+                    Once accepted, at least one author is expected to attend the event and present the paper. Accepted papers will be presented as Oral or Poster presentations during the workshop.
                 </p>
 
                 <br>
 
-                <p>
+               <!--  <p>
                     Springer’s proceedings LaTeX templates are available in <a href="https://www.overleaf.com/latex/templates/springer-lecture-notes-in-computer-science/kzwwpvhwnvfj#.WsdHOy5uZpg">Overleaf</a>. Springer encourages authors to include their <a href="https://www.springer.com/gp/authors-editors/orcid?wt_mc=Other.Other.1.AUT642.ORCID%20proceedings%20pilot%202017&utm_medium=other&utm_source=other&utm_content=8232017&utm_campaign=1_barz01_orcid%20proceedings%20pilot%202017">ORCIDs</a> in their papers.
                 </p>
                 <br> -->
@@ -108,18 +104,14 @@
                 <h2>Submission System</h2>
                 <br>
 
-                <p>
-                    TBA
-                </p>
-
-                <!-- <p style="color:red";>
+                <p style="color:red";>
                     SUBMISSIONS NOW OPEN!!! 
                 </p>
                 <br>
 
                 <p style="color:red";>
-                    (Please note that papers not accepted in the general session and fitting WAAMI themes could be submitted <a href="https://cmt3.research.microsoft.com/WAAMI2020">here</a>)
-                </p> -->
+                    (Please note that papers not accepted in the general session and fitting WAAMI themes could be submitted at <a href="https://cmt3.research.microsoft.com/WAAMI2021/Submission/Manage">https://cmt3.research.microsoft.com/WAAMI2021/Submission/Manage</a>)
+                </p>
 
             </div>
         </div>
