--- a/Topics.html
+++ b/Topics.html
@@ -110,6 +110,8 @@
                     <li>Mission planning for airborne data collection&nbsp;</li>
                     <li>Image Fusion applied to airborne and ground-based camera systems&nbsp;</li>
                     <li>Fusion of open-source geospatial data and airborne imagery&nbsp;</li>
+                    <li>Distributed learning based approaches for scene understanding&nbsp;</li>
+                    <li>Scene understanding in degraded visual environment&nbsp;</li>
                 </ul>
 
                 <ul data-header="Applications"> 
