Organizers correction and flier added to home page.

--- a/Organizers.html
+++ b/Organizers.html
@@ -173,9 +173,9 @@
                     <li>Joseph L. Mundy, Vision Systems&nbsp;</li>
                     <li>Mahdieh Poostchi, Samsung Electronics (USA)&nbsp;</li>
                     <li>David Portugal, University of Coimbra (Portugal)&nbsp;</li>
-                    <li>Rao Raghuveer, USARMY CCDC  Army Research Laboratory (USA)&nbsp;</li>
+                    <li>Raghuveer Rao, USARMY CCDC Army Research Laboratory (USA) &nbsp;</li>
                     <li>Walter Scheirer, University of Notre Dame (USA)&nbsp;</li>
-                    <li>Guna Seetharaman, Navy Research Labaratory (USA)&nbsp;</li>
+                    <li>Guna Seetharaman, Naval Research Laboratory (USA)&nbsp;</li>
                     <li>Omar Tahri, INSA Centre Val de Loire (France)&nbsp;</li>
                     <li>Rui Wang, Facebook&nbsp;</li>
                     <li>Zhangyang (Atlas) Wang, Texas A&M University (USA)&nbsp;</li>
