--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
                     <li>Workshop author notification: <strong>August 1st, 2021</strong></li>
                     <li>Camera-ready submission: <strong>August 17th, 2021</strong></li>
                 </ul>
-                <!-- <br>
+                <br>
                 <br>
                 <p>
-                    <a href="files/2020_WAAMI_Flier_PC.pdf">Download the Call for Paper in PDF</a>
-                </p> -->
+                    <a href="files/2021_WAAMI_CFP.pdf">Download the Call for Paper in PDF</a>
+                </p>
                 <br>
 
             </div>
