Organizer affiliation change

--- a/Organizers.html
+++ b/Organizers.html
@@ -178,7 +178,7 @@
                     <li>Guna Seetharaman, Naval Research Laboratory (USA)&nbsp;</li>
                     <li>Omar Tahri, INSA Centre Val de Loire (France)&nbsp;</li>
                     <li>Rui Wang, Facebook&nbsp;</li>
-                    <li>Zhangyang (Atlas) Wang, Texas A&M University (USA)&nbsp;</li>
+                    <li>Zhangyang (Atlas) Wang, University of Texas at Austin&nbsp;</li>
                    <!--  <li>May Casterline, NVIDIA (USA)&nbsp;</li>
                     <li>Diego Faria, Aston University (UK)&nbsp;</li>
                     <li>Rengarajan Pelapur, Thermo Fisher Scientific (USA)&nbsp;</li>
