--- a/Organizers.html
+++ b/Organizers.html
@@ -176,7 +176,7 @@
                     <li>Raghuveer Rao, USARMY CCDC Army Research Laboratory (USA) &nbsp;</li>
                     <li>Walter Scheirer, University of Notre Dame (USA)&nbsp;</li>
                     <li>Guna Seetharaman, Naval Research Laboratory (USA)&nbsp;</li>
-                    <li>Omar Tahri, INSA Centre Val de Loire (France)&nbsp;</li>
+                    <li>Omar Tahri, University of Burgundy (France)&nbsp;</li>
                     <li>Rui Wang, Facebook&nbsp;</li>
                     <li>Zhangyang (Atlas) Wang, University of Texas at Austin&nbsp;</li>
                    <!--  <li>May Casterline, NVIDIA (USA)&nbsp;</li>
