--- a/Important Dates.html
+++ b/Important Dates.html
@@ -75,12 +75,12 @@
         <div class="row">
             <div class="span12">
                 <h2>Important dates</h2>
-                <!-- <p style="color:red; font-size: 20px">
-                    Submission deadline extension !!!
-                </p> -->
+                <p style="color:red; font-size: 20px">
+                    Submission deadline extended !!! Final extension !!!
+                </p>
                 <ul class="">
-                    <!-- <li><strong>Workshop submission deadline: October 17th, 2020</strong></li> -->
-                    <li>Workshop paper submission deadline: <strong>July 10th, 2021</strong></li>
+                    <li><strong>Workshop submission deadline: July 23rd, 2021</strong></li>
+                    <!-- <li>Workshop paper submission deadline: <strong>July 10th, 2021</strong></li> -->
                     <li>Workshop author notification: <strong>August 1st, 2021</strong></li>
                     <li>Camera-ready submission: <strong>August 17th, 2021</strong></li>
                 </ul>
