--- a/Important Dates.html
+++ b/Important Dates.html
@@ -79,7 +79,7 @@
                     Submission deadline extended !!! Final extension !!!
                 </p>
                 <ul class="">
-                    <li><strong>Workshop submission deadline: July 23rd, 2021</strong></li>
+                    <li><strong>Workshop paper submission deadline: July 23rd, 2021</strong></li>
                     <!-- <li>Workshop paper submission deadline: <strong>July 10th, 2021</strong></li> -->
                     <li>Workshop author notification: <strong>August 1st, 2021</strong></li>
                     <li>Camera-ready submission: <strong>August 17th, 2021</strong></li>
