updating organizers page.

--- a/Organizers.html
+++ b/Organizers.html
@@ -76,14 +76,14 @@
             <div class="span12">
                 <h2>Organizing Committee</h2>
 
-                <ul>
+                <!-- <ul>
                     <li>Kannappan Palaniappan, University of Missouri (USA)&nbsp;</li>
                     <li>Filiz Bunyak, University of Missouri (USA)&nbsp;</li>
                     <li>Marc-Antoine Drouin, National Research Council, (Canada)&nbsp;</li>
                     <li>Priya Narayanan, USARMY CCDC Army Research Laboratory (USA)&nbsp;</li>
-                </ul>
+                </ul> -->
 
-                <!-- <div class="flexWrap">
+                <div class="flexWrap">
                   <div class="flexCol">
                     <div class="center-img">
                         <div>
@@ -94,19 +94,6 @@
                         </div>
                         <div class="org-affiliation">
                             <i>University of Missouri (USA)</i> 
-                        </div>
-                    </div>
-                  </div>
-                  <div class="flexCol">
-                    <div class="center-img">
-                        <div>
-                            <img src="img/HeesungKwon.png" class="img-responsive"/>  
-                        </div>
-                        <div class="org-name">
-                            <b>Heesung Kwon</b>  
-                        </div>
-                        <div class="org-affiliation">
-                            <i>USARMY CCDC  Army Research Laboratory (USA)</i> 
                         </div>
                     </div>
                   </div>
@@ -126,13 +113,13 @@
                   <div class="flexCol">
                     <div class="center-img">
                         <div>
-                            <img src="img/AliAkbarpourHadi.png" class="img-responsive"/>  
+                            <img src="img/MarcAntoine.png" class="img-responsive"/>  
                         </div>
                         <div class="org-name">
-                            <b>Hadi Aliakbarpour</b>  
+                            <b>Marc-Antoine Drouin</b>  
                         </div>
                         <div class="org-affiliation">
-                            <i>University of Missouri (USA)</i> 
+                            <i>National Research Council (Canada)</i> 
                         </div>
                     </div>
                   </div>
@@ -154,7 +141,7 @@
                         
                     </div>
                   </div>
-                </div> -->
+                </div>
 
                 <br>   
 
