--- a/Program.html
+++ b/Program.html
@@ -75,12 +75,18 @@
         <div class="row">
             <div class="span12">
                 <h2>Program</h2>
-
                 <p>
-                    TBA
+                    The Second Workshop on Analysis of Aerial Motion Imagery (WAAMI) will be held in 
+                    conjunction with the ICCV conference as a virtual event.
                 </p>
-                <!-- <p>
-                    The WAAMI workshop will be held in conjunction with the ICPR main conference, that will use the UNDERLINE web platform to run the entire ICPR on-line event. The WAAMI workshop will receive a private individual zoom link that will provide a workshop private virtual room for the whole duration of the event. From the UNDERLINE platform any registered person will have the possibility to join the workshop. All presentations will be oral. Time at disposal for Oral Presentations will be <b>20 minutes</b>. Each slot will be split in <u>15 minutes</u> for the <i>presentation</i> itself and <u>5 minutes</u> for <i>questions</i> from the audience. The presenters are kindly asked to provide the slides (pdf) in advance. The entire workshop event will be recorded using the classic ZOOM recording modality. The schedule of the online workshop event is the following (<a href="files/WAAMI_2020_Program.pdf">pdf</a>):
+                <p>
+                    All presentations will be oral. Time at disposal for Oral Presentations will be <b>20 minutes</b>. 
+                    Each slot will be split in <u>15 minutes</u> for the <i>presentation</i> itself and <u>5 minutes</u> for <i>questions</i> from the audience. 
+                </p>
+                <p>
+                    The presenters are kindly asked to provide the slides (pdf) in advance. 
+                    The entire workshop event will be recorded using the classic ZOOM recording modality. 
+                    The schedule of the online workshop event is the following (<a href="files/WAAMI_2021_Program.pdf">pdf</a>): 
                 </p> 
                 <br>
                 <br>
@@ -88,136 +94,78 @@
             <table class="tableizer-table">
                 <thead>
                     <tr class="tableizer-firstrow">
-                        <th colspan="6">WAAMI 2020 Program (Jan 11, 2021)</th>
+                        <th colspan="2">WAAMI 2021 Program (Oct 17, 2021)</th>
                     </tr>
                 </thead>
 
                 <tbody>
                     <tr>
-                        <td class="secondrow">LA</td>
-                        <td class="secondrow">NY</td>
-                        <td class="secondrow">CET</td>
-                        <td class="secondrow">BEJING</td>
-                        <td class="secondrow">SYD</td>
+                        <td class="secondrow">Eastern Day Light <br> Time (EDT) UTC-4</td>
                         <td class="secondrow">Program Overview</td>
                     </tr>
                     <tr>
-                        <td>3:00 - <br> 3:15 AM</td>
-                        <td>6:00 - <br> 6:15 AM</td>
-                        <td>12:00 - <br> 12:15 PM</td>
-                        <td>7:00 - <br> 7:15 PM</td>
-                        <td>10:00 - <br> 10:15 PM</td>
-                        <td>Opening Remarks</td>
+                        <td class="time" bgcolor="#F2D7D5">7:30 AM</td>
+                        <td bgcolor="#F2D7D5">Opening Remarks</td>
                     </tr>
                     <tr>
-                        <td>3:15 - <br> 3:45 AM</td>
-                        <td>6:15 - <br> 6:45 AM</td>
-                        <td>12:15 - <br> 12:45 PM</td>
-                        <td>7:15 - <br> 7:45 PM</td>
-                        <td>10:15 - <br> 10:45 PM</td>
-                        <td>Keynote - TBA</td>
+                        <td class="time">7:40 AM</td>
+                        <td><i><b>Aerial Cross-platform Path Planning Dataset (Paper ID: 11)</b></i> <br>
+                        <i>Md. Shahid, Sumohana S. Channappayya (IIT Hyderabad)</i></td>
                     </tr>
                     <tr>
-                        <td>3:45 - <br> 4:05 AM</td>
-                        <td>6:45 - <br> 7:05 AM</td>
-                        <td>12:45 - <br> 1:05 PM</td>
-                        <td>7:45 - <br> 8:05 PM</td>
-                        <td>10:45 - <br> 11:05 PM</td>
-                        <td>Fine-tuning for one-look regression vehicle counting in low-shot aerial datasets 
-                            [<a href="files/slides/RIT-Rangnekar_vehicle-counting.pdf">slides</a>] <br>
-                        <i>Aneesh Rangnekar, Yi Yao, Matthew J Hoffman, Ajay Divakaran</i></td>
+                        <td class="time">8:00 AM</td>
+                        <td><i><b>JanusNet: Detection of Moving Objects from UAV Platforms (Paper ID: 5)</b></i> <br>
+                        <i>Yuxiang Zhao; Khurram Shafique; Zeeshan Rasheed; Maoxu Li (Novateur Research Solutions)</i></td>
                     </tr>
                     <tr>
-                        <td>4:05 - <br> 4:25 AM</td>
-                        <td>7:05 - <br> 7:25 AM</td>
-                        <td>1:05 - <br> 1:25 PM</td>
-                        <td>8:05 - <br> 8:25 PM</td>
-                        <td>11:05 - <br> 11:25 PM</td>
-                        <td>Generative Data Augmentation for Vehicle Detection in Aerial Images 
-                            [<a href="files/slides/METU-Kumdakci_vehicle-detection.pdf">slides</a>] <br>
-                        <i>Hilmi Kumdakcı, Cihan Öngün, Alptekin Temizel</i></td>
-                    </tr>        
-                    <tr>
-                        <td>4:25 - <br> 4:45 AM</td>
-                        <td>7:25 - <br> 7:45 AM</td>
-                        <td>1:25 - <br> 1:45 PM</td>
-                        <td>8:25 - <br> 8:45 PM</td>
-                        <td>11:25 - <br> 11:45 PM</td>
-                        <td>An Efficient and Reasonably Simple Solution to the Perspective-Three-Point Problem 
-                            [<a href="files/slides/Nanjing-Yu_efficient-P3P.pdf">slides</a>] <br>
-                        <i>Qida Yu, Guili Xu, Jiachen Shi</i></td>
+                        <td class="time">8:20 AM</td>
+                        <td><i><b>Appearance and Motion Based Persistent Multiple Object Tracking in Wide <br> Area Motion Imagery (Paper ID: 3)</b></i> <br>
+                        <i>Lars Sommer, Wolfgang Krüger (Fraunhofer IOSB Karlsruhe); Michael Teutsch (Hensoldt Optronics)</i></td>
                     </tr>
                     <tr>
-                        <td>4:45 - <br> 5:05 AM</td>
-                        <td>7:45 - <br> 8:05 AM</td>
-                        <td>1:45 - <br> 2:05 PM</td>
-                        <td>8:45 - <br> 9:05 PM</td>
-                        <td>11:45 - <br> 12:05 AM</td>
-                        <td>Modeling and Simulation Framework for Airborne Camera Systems 
-                            [<a href="files/slides/DRDO-Drouin_airborne-cam-systems.pdf">slides</a>] <br>
-                        <i>Marc-Antoine Drouin, Jonathan Fournier, Jonathan Boisvert, Louis Borgeat</i></td>
-                    </tr>                    
-                    <tr>
-                        <td>5:05 - <br> 5:25 AM</td>
-                        <td>8:05 - <br> 8:25 AM</td>
-                        <td>2:05 - <br> 2:25 PM</td>
-                        <td>9:05 - <br> 9:25 PM</td>
-                        <td>12:05 - <br> 12:25 AM</td>
-                        <td>City-Scale Point Cloud Stitching Using 2D/3D Registration for Large Geographical Coverage 
-                            [<a href="files/slides/UM-Yao_point-cloud-stitching.pdf">slides</a>] <br>
-                        <i>Shizeng Yao, Hadi Aliakbarpour, Guna Seetharaman, Kannappan Palaniappan</i></td>
+                        <td class="time">8:40 AM</td>
+                        <td><i><b>Robust Multi-Object Tracking Using Re-Identification Features and Graph <br> Convolutional Networks (Paper ID: 2)</b></i> <br>
+                        <i>Christian Lusardi; Abu Md Niamul Taufique; Andreas Savakis (Rochester Institute of Technology)</i></td>
                     </tr>
                     <tr>
-                        <td>5:25 - <br> 5:45 AM</td>
-                        <td>8:25 - <br> 8:45 AM</td>
-                        <td>2:25 - <br> 2:45 PM</td>
-                        <td>9:25 - <br> 9:45 PM</td>
-                        <td>12:25 - <br> 12:45 AM</td>
-                        <td>On The Development of a Classification Based Automated Motion Imagery Interpretability Prediction 
-                            [<a href="files/slides/IFT-Chen_VNIIRS.pdf">slides</a>] <br>
-                        <i>Hua-mei Chen, Genshe Chen, Erik Blasch</i></td>
+                        <td class="time" bgcolor="#F6DDCC">9:00 AM</td>
+                        <td bgcolor="#F6DDCC">Break</td>
                     </tr>
                     <tr>
-                        <td>5:45 - <br> 6:05 AM</td>
-                        <td>8:45 - <br> 9:05 AM</td>
-                        <td>2:45 - <br> 3:05 PM</td>
-                        <td>9:45 - <br> 10:05 PM</td>
-                        <td>12:45 - <br> 1:05 AM</td>
-                        <td>Remote Liveness and Heart Rate Detection from Video 
-                            [<a href="files/slides/BAE-Deng_remote-heart-rate.pdf">slides</a>] <br>
-                        <i>Yunbin Deng</i></td>
+                        <td class="time">9:10 AM</td>
+                        <td><i><b>An Algorithmic Approach to Quantifying GPS Trajectory Error (Paper ID: 6)</b></i> <br>
+                        <i>Matthew Plaudis; Muhammad  Azam; Derek Jacoby; Yvonne Coady (University of Victoria) <br> and Marc-Antoine Drouin (National Research Council)</i></td>
                     </tr>
                     <tr>
-                        <td>6:05 - <br> 6:25 AM</td>
-                        <td>9:05 - <br> 9:25 AM</td>
-                        <td>3:05 - <br> 3:25 PM</td>
-                        <td>10:05 - <br> 10:25 PM</td>
-                        <td>1:05 - <br> 1:25 AM</td>
-                        <td>RADARSAT-2 Synthetic-Aperture Radar Land Cover Segmentation using Deep Convolutional Neural Networks 
-                            [<a href="files/slides/ETS-Saadati_SAR-landcover.pdf">slides</a>] <br> 
-                        <i>Mirmohammad Saadati, Marco Pedersoli, Peter Oliver</i></td>
+                        <td class="time">9:30 AM</td>
+                        <td><i><b>Simulated Photorealistic Deep Learning Framework and Workflows to  <br> Accelerate Computer Vision and Unmanned Aerial Vehicle Research (Paper ID: 4)</b></i> <br>
+                        <i>Brendan Alvey; Derek Anderson; Andrew R Buck; Matthew Deardorff; Grant Scott; <br> James Keller (University of Missouri)</i></td>
                     </tr>
                     <tr>
-                        <td>6:25 - <br> 6:45 AM</td>
-                        <td>9:25 - <br> 9:45 AM</td>
-                        <td>3:25 - <br> 3:45 PM</td>
-                        <td>10:25 - <br> 10:45 PM</td>
-                        <td>1:25 - <br> 1:45 AM</td>
-                        <td>Deep Learning Based Domain Adaptation with Data Fusion for Aerial Image Data Analysis 
-                            [<a href="files/slides/IFT-Sullivan_domain-adaptation.pdf">slides</a>] <br>
-                        <i>Erik Blasch, Jingyang Lu, Roman Ilin, Hua-mei Chen, Dan Shen, Nichole Sullivan, Genshe Chen, Robert Kozma</i></td>
+                        <td class="time">9:50 AM</td>
+                        <td><i><b>Point Cloud Object Segmentation Using Multi Elevation-Layer 2D <br> Bounding-Boxes (Paper ID: 7)</b></i> <br>
+                        <i>Tristan Brodeur; Steve Suddarth  (Transparent Sky) and Hadi AliAkbarpour (University of Missouri)</i></td>
                     </tr>
                     <tr>
-                        <td>6:45 - <br> 7:00 AM</td>
-                        <td>9:45 - <br> 10:00 AM</td>
-                        <td>3:45 - <br> 4:00 PM</td>
-                        <td>10:45 - <br> 11:00 PM</td>
-                        <td>1:45 - <br> 2:00 AM</td>
-                        <td>Closing Remarks and  Open Discussion</td>
+                        <td class="time">10:10 AM</td>
+                        <td><i><b>Learning-Based Shadow Detection in Aerial Imagery Using Automatic <br> Training Supervision from 3D Point Clouds (Paper ID: 10)</b></i> <br>
+                        <i>Deniz Kavzak Ufuktepe; Jaired Collins; Ekincan Ufuktepe; Joshua Fraser; Timothy Krock; <br> Kannappan Palaniappan (University of Missouri)</i></td>
+                    </tr>
+                    <tr>
+                        <td class="time" bgcolor="#D6EAF8">10:30 AM</td>
+                        <td bgcolor="#D6EAF8">Keynote - TBA</td>
+                    </tr>
+                    <tr>
+                        <td class="time" bgcolor="#F6DDCC">11:20 AM</td>
+                        <td bgcolor="#F6DDCC">Break</td>
+                    </tr>
+                    <tr>
+                        <td class="time" bgcolor="#D5F5E3">11:30 AM – 12:30 PM</td>
+                        <td bgcolor="#D5F5E3">Discussion Panel & Closing Remarks</td>
                     </tr>
                 </tbody>
             </table>
-            <br> -->
+            <br>
             </div>
         </div>
     </div>
