--- a/Program.html
+++ b/Program.html
@@ -109,22 +109,22 @@
                     </tr>
                     <tr>
                         <td class="time">7:40 AM</td>
-                        <td><i><b>Aerial Cross-platform Path Planning Dataset (Paper ID: 11)</b></i> <br>
+                        <td><i><b>Aerial Cross-platform Path Planning Dataset</b></i> <br>
                         <i>Md. Shahid, Sumohana S. Channappayya (IIT Hyderabad)</i></td>
                     </tr>
                     <tr>
                         <td class="time">8:00 AM</td>
-                        <td><i><b>JanusNet: Detection of Moving Objects from UAV Platforms (Paper ID: 5)</b></i> <br>
+                        <td><i><b>JanusNet: Detection of Moving Objects from UAV Platforms</b></i> <br>
                         <i>Yuxiang Zhao; Khurram Shafique; Zeeshan Rasheed; Maoxu Li (Novateur Research Solutions)</i></td>
                     </tr>
                     <tr>
                         <td class="time">8:20 AM</td>
-                        <td><i><b>Appearance and Motion Based Persistent Multiple Object Tracking in Wide <br> Area Motion Imagery (Paper ID: 3)</b></i> <br>
+                        <td><i><b>Appearance and Motion Based Persistent Multiple Object Tracking in Wide <br> Area Motion Imagery</b></i> <br>
                         <i>Lars Sommer, Wolfgang Krüger (Fraunhofer IOSB Karlsruhe); Michael Teutsch (Hensoldt Optronics)</i></td>
                     </tr>
                     <tr>
                         <td class="time">8:40 AM</td>
-                        <td><i><b>Robust Multi-Object Tracking Using Re-Identification Features and Graph <br> Convolutional Networks (Paper ID: 2)</b></i> <br>
+                        <td><i><b>Robust Multi-Object Tracking Using Re-Identification Features and Graph <br> Convolutional Networks</b></i> <br>
                         <i>Christian Lusardi; Abu Md Niamul Taufique; Andreas Savakis (Rochester Institute of Technology)</i></td>
                     </tr>
                     <tr>
@@ -133,22 +133,22 @@
                     </tr>
                     <tr>
                         <td class="time">9:10 AM</td>
-                        <td><i><b>An Algorithmic Approach to Quantifying GPS Trajectory Error (Paper ID: 6)</b></i> <br>
+                        <td><i><b>An Algorithmic Approach to Quantifying GPS Trajectory Error</b></i> <br>
                         <i>Matthew Plaudis; Muhammad  Azam; Derek Jacoby; Yvonne Coady (University of Victoria) <br> and Marc-Antoine Drouin (National Research Council)</i></td>
                     </tr>
                     <tr>
                         <td class="time">9:30 AM</td>
-                        <td><i><b>Simulated Photorealistic Deep Learning Framework and Workflows to  <br> Accelerate Computer Vision and Unmanned Aerial Vehicle Research (Paper ID: 4)</b></i> <br>
+                        <td><i><b>Simulated Photorealistic Deep Learning Framework and Workflows to  <br> Accelerate Computer Vision and Unmanned Aerial Vehicle Research</b></i> <br>
                         <i>Brendan Alvey; Derek Anderson; Andrew R Buck; Matthew Deardorff; Grant Scott; <br> James Keller (University of Missouri)</i></td>
                     </tr>
                     <tr>
                         <td class="time">9:50 AM</td>
-                        <td><i><b>Point Cloud Object Segmentation Using Multi Elevation-Layer 2D <br> Bounding-Boxes (Paper ID: 7)</b></i> <br>
+                        <td><i><b>Point Cloud Object Segmentation Using Multi Elevation-Layer 2D <br> Bounding-Boxes</b></i> <br>
                         <i>Tristan Brodeur; Steve Suddarth  (Transparent Sky) and Hadi AliAkbarpour (University of Missouri)</i></td>
                     </tr>
                     <tr>
                         <td class="time">10:10 AM</td>
-                        <td><i><b>Learning-Based Shadow Detection in Aerial Imagery Using Automatic <br> Training Supervision from 3D Point Clouds (Paper ID: 10)</b></i> <br>
+                        <td><i><b>Learning-Based Shadow Detection in Aerial Imagery Using Automatic <br> Training Supervision from 3D Point Clouds</b></i> <br>
                         <i>Deniz Kavzak Ufuktepe; Jaired Collins; Ekincan Ufuktepe; Joshua Fraser; Timothy Krock; <br> Kannappan Palaniappan (University of Missouri)</i></td>
                     </tr>
                     <tr>
